updated site link

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 NEXT_PUBLIC_BASE_URL="https://pishro-admin.vercel.app/"
 # Direct backend API URL (CORS is now fixed on backend)
-NEXT_PUBLIC_API_URL="https://pishro-0.vercel.app/api"
+NEXT_PUBLIC_API_URL="https://www.pishrosarmaye.com/api"
 # Backend URL for server-side proxy (kept for backward compatibility)
-BACKEND_API_URL="https://pishro-0.vercel.app/api"
+BACKEND_API_URL="https://www.pishrosarmaye.com/api"
 DATABASE_URL="file:./dev.db"
-
